# SprawozdanieBD

./: .gitmodules  pyproject.toml  zapytania_postgresql.py  zapytania_sqlite.py
source/: conf.py  index.rst  zapytania_PostgreSQL.ipynb
source/rozdzial_1/: index.rst
source/rozdzial_2/: index.rst
source/rozdzial_3/: index.rst
source/rozdzial_4/: index.rst
source/rozdzial_5/: index.rst
